2103 [MediaInfo] fixed opening of DG index files if the source file is using not only 7bit ASCII characters
2102 [MediaInfo] added StreamOrder to the MediaInfo wrapper (requires mediainfo revision 0.7.53+)
2101 [M2TS muxer] added some missing audio types
2100 [x264] check if files for --qpfile/--cqmfile are available
            improved --min-keyint default value calculation
            removed automatic deactivation of x64 x264 in case of an error
2099 fixed a crash introduced in 2095 when using .NET 2.0 SP1 or older
2098 [x264] added option to adjust GOP size based on the FPS of the source (enabled by default)
            changed --weightp and --min-keyint default value calculation
2097 [Bitrate Calculator] improved M2TS calculation assumption. Warning: it is better but also not correct
2096 [Update] changed recommended path for neroaacenc to tools\eac3to
2095 [Log] changed resource lock behavior. Bug #3466426
2094 [MP4 Muxer] use ISO 639-2/T language codes when muxing. Bug #3201829
2093 [Update] if a component is missing a warning message will appear at startup
2092 [MainForm] offer to install AviSynth if AviSynth is not found but the installer is availabe (x86 only)
2091 [Settings] changed default value of "Autostart Queue" to enabled
2090 [Audio Encoder] do not abort downmix anymore if input avs file has no channel position information
2089 [HD Streams Extractor] defaulting to English if the track language can not be indentified (MKV only)
2088 [Audio Encoder] cosmetics
2087 [FFMS] remove AssumeFPS() as it is causing problems with hybrid/telecined input. Bug #3463347
2086 [AVS Script Creator] improve input DAR detection when using AVS input files
2085 [OneClick] fixed long delay during processing when adding more than 4 tracks (part III)
2084 [AVS Script Creator] resize value will only be added to the script if necessary
                          fixed button checked states after loading avisynth profiles