@@ -31,5 +31,5 @@ using System.Runtime.InteropServices;
 //
 // Vous pouvez spécifier toutes les valeurs ou indiquer les numéros de révision et de build par défaut 
 // en utilisant '*', comme indiqué ci-dessous :
-[assembly: AssemblyVersion("0.7.52.0")]
-[assembly: AssemblyFileVersion("0.7.52.0")]
+[assembly: AssemblyVersion("0.7.53.0")]
+[assembly: AssemblyFileVersion("0.7.53.0")]
